--- a/config/plugins/datatables/media/css/dataTables.jqueryui.css
+++ b/config/plugins/datatables/media/css/dataTables.jqueryui.css
@@ -148,7 +148,7 @@ table.dataTable.nowrap th, table.dataTable.nowrap td {
 }
 table.dataTable.compact thead th,
 table.dataTable.compact thead td {
-  padding: 4px 17px;
+  padding: 4px 17px 4px 4px;
 }
 table.dataTable.compact tfoot th,
 table.dataTable.compact tfoot td {
@@ -248,23 +248,12 @@ table.dataTable td {
 .dataTables_wrapper .dataTables_length {
   float: left;
 }
-.dataTables_wrapper .dataTables_length select {
-  border: 1px solid #aaa;
-  border-radius: 3px;
-  padding: 5px;
-  background-color: transparent;
-  padding: 4px;
-}
 .dataTables_wrapper .dataTables_filter {
   float: right;
   text-align: right;
 }
 .dataTables_wrapper .dataTables_filter input {
-  border: 1px solid #aaa;
-  border-radius: 3px;
-  padding: 5px;
-  background-color: transparent;
-  margin-left: 3px;
+  margin-left: 0.5em;
 }
 .dataTables_wrapper .dataTables_info {
   clear: both;
@@ -412,7 +401,7 @@ table.dataTable td {
 
 @media screen and (max-width: 767px) {
   .dataTables_wrapper .dataTables_info,
-.dataTables_wrapper .dataTables_paginate {
+  .dataTables_wrapper .dataTables_paginate {
     float: none;
     text-align: center;
   }
@@ -422,7 +411,7 @@ table.dataTable td {
 }
 @media screen and (max-width: 640px) {
   .dataTables_wrapper .dataTables_length,
-.dataTables_wrapper .dataTables_filter {
+  .dataTables_wrapper .dataTables_filter {
     float: none;
     text-align: center;
   }
